# limit-order-book

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: limit-order-book.tex
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  analytics.py  execution.py  market_data.py  order.py  orderbook.py  simulation.py
src/core/agents/: __init__.py  base.py  informed.py  market_maker.py  momentum.py  noise.py
src/viz/: __init__.py  app.py
tests/: test_agents.py  test_analytics.py  test_execution.py  test_matching.py  test_orderbook.py
